<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:id="@+id/expressionEditText"
            android:hint="@string/expression_hint"
            android:layout_weight="0.2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calculate"
            android:id="@+id/calculateButton"
            android:layout_weight="0.8" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/expressionResultTextView"
        android:padding="@dimen/activity_vertical_margin"
        style="@style/textLargeItalic"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="4"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/expressionResultTextView"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/number1Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_1"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/number2Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_2"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            android:id="@+id/number3Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_3"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/number4Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_4"
            android:layout_row="0"
            android:layout_column="3"/>

        <Button
            android:id="@+id/number5Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_5"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/number6Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_6"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/number7Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_7"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:id="@+id/number8Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_8"
            android:layout_row="1"
            android:layout_column="3"/>

        <Button
            android:id="@+id/number9Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_9"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/number0Button"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/number_0"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/clearLastSymbolButton"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/clear_last"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/plusSignButton"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/plus_sign"
            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:id="@+id/minusSignButton"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/minus_sign"
            android:layout_row="3"
            android:layout_column="1"/>

        <Button
            android:id="@+id/multiplySignButton"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/multiply_sign"
            android:layout_row="3"
            android:layout_column="2"/>

        <Button
            android:id="@+id/divisionSignButton"
            style="@style/numbers"
            android:minHeight="@dimen/number_min_height"
            android:minWidth="@dimen/number_min_width"
            android:text="@string/division_sign"
            android:layout_row="3"
            android:layout_column="3"/>

    </GridLayout>

</RelativeLayout>


